# DataExrtactor

./: .gitignore  pyproject.toml
DataExtractor.egg-info/: PKG-INFO  SOURCES.txt
